<resources>
    <string name="app_name">趣探</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_recommend">教學影片</string>
    <string name="place_recommend">場地推薦</string>
    <string name="appliance_recommend">用品推薦</string>
    <string name="do_want_to_personality_test">進行性格測驗?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="take_mbti_test">進行MBTI測驗?</string>
    <string name="have_test_result">已有測驗結果</string>
    <string name="view_interest_categories">直接查看興趣類別</string>
    <string name="select_this_hobby">選擇此興趣</string>
    <string name="change_hobby">更換興趣</string>
    <string name="system_recommend_hobby">系統推薦興趣</string>
    <string name="system_recommend_appliance">系統推薦用品</string>
    <string name="please_enter_budget">請輸入您的預算</string>
    <string name="enter_budget">輸入預算</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string-array name="dropdown_menu_items">
        <item>棒球</item>
        <item>籃球</item>
        <item>排球</item>
        <item>羽球</item>
        <item>桌球</item>
        <item>網球</item>
    </string-array>
    <string name="default_web_client_id">YOUR_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="confirm_edit">確認修改</string>
    <string name="progress_text">%1$d / 100</string>
    <string name="unrated">未評分</string>
    <string name="save_record">儲存紀錄</string>
    <string name="my_learning_score_curve">我的學習評分曲線</string>
    <string name="average_learning_curve">學員平均學習曲線</string>
    <string name="no_data_for_date">尚未有該日期的數據!</string>
    <string name="cannot_get_user_id">無法獲取用戶ID</string>
    <string name="photo_saved">相片已儲存</string>
    <string name="Unauthorized_location_permission">未授權定位權限</string>
    <string name="location_permission_denied">定位權限被拒絕</string>
    <string name="your_location">你的位置</string>

</resources>