<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".personalitytest.EnterBudgetFragment">

        <TextView
            android:id="@+id/enter_budget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/please_enter_budget"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/budget_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/grey_round_corner"
            android:hint="@string/enter_budget"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/enter_budget_text"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="@+id/enter_budget_text"
            app:layout_constraintTop_toBottomOf="@+id/enter_budget_text" />

        <Button
            android:id="@+id/system_recommend_appliance_Button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/grey_round_corner"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/system_recommend_appliance"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/budget_input"
            app:layout_constraintStart_toStartOf="@+id/budget_input"
            app:layout_constraintTop_toBottomOf="@+id/budget_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>