<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mbtiTestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/take_mbti_test"
            android:textSize="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mbti_yes_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/no_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mbtiTestText" />

        <Button
            android:id="@+id/no_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mbti_yes_button"
            app:layout_constraintTop_toTopOf="@+id/mbti_yes_button" />

        <TextView
            android:id="@+id/no_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/have_test_result"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/no_button"
            app:layout_constraintStart_toStartOf="@+id/no_button"
            app:layout_constraintTop_toBottomOf="@+id/no_button" />

        <TextView
            android:id="@+id/enter_mbti_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="432dp"
            android:text="請輸入您的MBTI測驗結果"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mbti_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/grey_round_corner"
            android:hint=""
            android:inputType="number"
            android:text=""
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_mbti_result" />

        <Button
            android:id="@+id/system_recommend_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/system_recommend_hobby"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/mbti_input"
            app:layout_constraintStart_toStartOf="@+id/mbti_input"
            app:layout_constraintTop_toBottomOf="@+id/mbti_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>