<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="550dp"
            android:layout_height="550dp"
            android:layout_marginEnd="-350dp"
            android:layout_marginTop="-350dp"
            android:background="@drawable/blue_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="550dp"
            android:layout_height="550dp"
            android:layout_marginStart="-350dp"
            android:layout_marginBottom="-350dp"
            android:background="@drawable/yellow_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/personalityTestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:text="@string/do_want_to_personality_test"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_button_full"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/no_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityTestText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_button_stroke"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#a3b2d1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yes_button"
            app:layout_constraintTop_toTopOf="@+id/yes_button" />

        <TextView
            android:id="@+id/no_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_interest_categories"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/no_button"
            app:layout_constraintStart_toStartOf="@+id/no_button"
            app:layout_constraintTop_toBottomOf="@+id/no_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>